@@ -39,6 +39,11 @@ Capistrano::Configuration.instance.load do
       run "touch #{shared_path}/db.ini"
     end
 
+    desc '|OmekaRecipes| Move a pristine copy of the archives/files directory to the shared_path'
+    task :move_files_to_shared, :except => { :no_release => true } do
+      run "touch #{shared_path}/db.ini"
+    end
+
     desc '|OmekaRecipes| Deploy the plugins defined in the plugins hash'
     task :get_plugins do
       git_clone(plugins, 'plugins')
@@ -67,17 +72,17 @@ Capistrano::Configuration.instance.load do
       DESC
       task :start, :roles => :web, :except => { :no_release => true } do
         require 'erb'
-        on_rollback { run "rm -f #{shared_path}/system/#{maintenace_basename}.html" }
+        on_rollback { run "rm -f #{shared_path}/system/maintenance.html" }
 
         warn <<-HTACCESS
           # Please add something like this to your site's Apache htaccess to redirect users to the maintenance page.
           # More Info: http://www.shiftcommathree.com/articles/make-your-rails-maintenance-page-respond-with-a-503
 
-          ErrorDocument 503 /system/#{maintenance_basename}.html
+          ErrorDocument 503 /system/maintenance.html
           RewriteEngine On
           RewriteCond %{REQUEST_URI} !\.(css|gif|jpg|png)$
-          RewriteCond %{DOCUMENT_ROOT}/system/#{maintenance_basename}.html -f
-          RewriteCond %{SCRIPT_FILENAME} !#{maintenance_basename}.html
+          RewriteCond %{DOCUMENT_ROOT}/system/maintenance.html -f
+          RewriteCond %{SCRIPT_FILENAME} !maintenance.html
           RewriteRule ^.*$  -  [redirect=503,last]
         HTACCESS
 
@@ -87,13 +92,13 @@ Capistrano::Configuration.instance.load do
         template = File.read(maintenance_template_path)
         result = ERB.new(template).result(binding)
 
-        put result, "#{shared_path}/system/#{maintenace_basename}.html", :mode => 0644
+        put result, "#{shared_path}/system/maintenance.html", :mode => 0644
       end
     end
 
     desc <<-DESC
       Enables the application web-accessible again. Removes the \n
-      "#{maintenace_basename}.html" page generated by deploy:maitenance:start,
+      "maintenance.html" page generated by deploy:maitenance:start,
       which, (if your server is configured properly) will make Omeka web-
       accessible again.
     DESC
@@ -104,8 +109,9 @@ Capistrano::Configuration.instance.load do
   end
 
   after 'deploy:cold', 'omeka:fix_archive_permissions', 'omeka:move_archive_dir'
+  after 'deploy:setup', 'omeka:move_files_to_shared'
   #before 'deploy:create_symlink', 'omeka:move_archive_dir'
-  after 'deploy:create_symlink', 'omeka:link_archive_dir'
+  #after 'deploy:create_symlink', 'omeka:link_archive_dir'
   after 'deploy', 'omeka:get_themes', 'omeka:get_plugins', 'omeka:rename_files'
 
 end
