@@ -3,6 +3,9 @@
 Additional tasks for deploy for cleaning up, performing git-style upgrades,
 and mapping setup directories for the `#{shared_path}`.
 
+* Travis integration
+
+
 ## 0.2.1
 
 This release contained mainly bug fixes and fixed consistency issues with the
